--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/ui-ux-projects/page.js", "src/app/ui-ux/projects/page.js", "src/app/components/ui/card.jsx", "src/app/components/Welcome.jsx", "src/app/components/Herosection.jsx"],
   "exclude": ["node_modules"]
 }
