--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tsparticles/engine": "^3.3.0",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.3.0",
+    "@vercel/analytics": "^1.3.1",
     "body-parser": "^1.20.2",
     "clsx": "^2.1.1",
     "express": "^4.19.2",
