--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.3.0",
     "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.12",
     "body-parser": "^1.20.2",
     "clsx": "^2.1.1",
     "express": "^4.19.2",
