updated gd page

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@nextui-org/react": "^2.4.2",
     "@radix-ui/react-label": "^2.0.2",
     "@react-three/fiber": "^8.16.6",
     "@studio-freight/lenis": "^1.0.42",
@@ -29,14 +30,17 @@
     "install": "^0.13.0",
     "locomotive-scroll": "^5.0.0-beta.12",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "14.2.3",
+    "next": "^14.2.4",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "npm": "^10.8.0",
     "react": "^18",
     "react-dom": "^18",
     "react-player": "^2.16.0",
+    "react-slick": "^0.30.2",
     "sass": "^1.77.2",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.4",
     "tailwind-merge": "^2.3.0",
     "three": "^0.164.1"
   },
@@ -45,6 +49,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "@types/three": "^0.164.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
