--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@nextui-org/react": "^2.4.2",
     "@radix-ui/react-label": "^2.0.2",
     "@react-three/fiber": "^8.16.6",
@@ -25,22 +27,22 @@
     "body-parser": "^1.20.2",
     "clsx": "^2.1.1",
     "express": "^4.19.2",
-    "framer-motion": "^11.2.4",
+    "framer-motion": "^11.11.10",
     "gsap": "^3.12.5",
     "install": "^0.13.0",
-    "locomotive-scroll": "^5.0.0-beta.12",
+    "locomotive-scroll": "^5.0.0-beta.21",
     "mini-svg-data-uri": "^1.4.4",
     "next": "^14.2.4",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
-    "npm": "^10.8.0",
+    "npm": "^10.9.0",
     "react": "^18",
     "react-dom": "^18",
     "react-player": "^2.16.0",
     "react-slick": "^0.30.2",
-    "sass": "^1.77.2",
+    "sass": "^1.80.5",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.1.4",
+    "swiper": "^11.1.14",
     "tailwind-merge": "^2.3.0",
     "three": "^0.164.1"
   },
