--- a/package.json
+++ b/package.json
@@ -18,21 +18,25 @@
     "@radix-ui/react-label": "^2.0.2",
     "@react-three/fiber": "^8.16.6",
     "@studio-freight/lenis": "^1.0.42",
-    "@tabler/icons-react": "^3.4.0",
-    "@tsparticles/engine": "^3.3.0",
+    "@tabler/icons-react": "^3.31.0",
+    "@tsparticles/engine": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
-    "@tsparticles/slim": "^3.3.0",
+    "@tsparticles/slim": "^3.8.1",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "body-parser": "^1.20.2",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.3",
     "express": "^4.19.2",
-    "framer-motion": "^11.11.10",
+    "framer-motion": "^11.18.2",
     "gsap": "^3.12.5",
     "install": "^0.13.0",
     "locomotive-scroll": "^5.0.0-beta.21",
+    "lucide-react": "^0.483.0",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "^14.2.4",
+    "motion": "^12.5.0",
+    "next": "^15.2.3",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "npm": "^10.9.0",
@@ -41,9 +45,11 @@
     "react-player": "^2.16.0",
     "react-slick": "^0.30.2",
     "sass": "^1.80.5",
+    "shadcn-ui": "^0.9.5",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.14",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.164.1"
   },
   "devDependencies": {
