--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "compilerOptions": {
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -18,9 +22,26 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
-    }
+      "@/*": [
+        "./src/*"
+      ]
+    },
+    "target": "ES2017"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/ui-ux-projects/page.js", "src/app/ui-ux/projects/page.js", "src/app/components/ui/card.jsx", "src/app/components/Welcome.jsx", "src/app/components/Herosection.jsx", "src/app/xp/page.js", "src/app/components/ui/Slider.js"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/app/ui-ux-projects/page.js",
+    "src/app/ui-ux/projects/page.js",
+    "src/app/components/ui/card.jsx",
+    "src/app/components/Welcome.jsx",
+    "src/app/components/Herosection.jsx",
+    "src/app/xp/page.js",
+    "src/app/components/ui/Slider.js"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
